<resources>
    <string name="app_name">GateKeep</string>
    <string name="student_qr">student QR</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="the_ultimate_school_security_and_gate_pass_app">The ultimate school security gate pass solution</string>
    <string name="welcome_to_n_gate_keep">Welcome to\n GateKeep</string>
    <string name="forgot_your_npassword">Forgot your\nPassword?</string>
    <string name="your_email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_to_your_naccount">Login to your\nAccount</string>
    <string name="your_password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forget_password">Forget password</string>
    <string name="or">or</string>
    <string name="dont_have_an_account_register">Register</string>
    <string name="create_an_naccount">Create an\nAccount</string>
    <string name="your_name">Name </string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navbar">navbar</string>
    <string name="general">General</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="links">Links</string>
    <string name="github">Github</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">Welcome,</string>
    <string name="history">History</string>
    <string name="disclaimer_message">Please note that the GateKeep app is designed for School entry tracking purposes only. The app is not responsible for verifying the accuracy of the entry records of the attendees. The QR codes assigned to the students are solely for the purpose of entry tracking and should not be used for any other purpose. The app does not guarantee the security or confidentiality of the student\'s personal information, including their name and email address. The Gate Keeper is solely responsible for ensuring that the attendance records are accurate and up-to-date. The use of this app is at the discretion of the user, and we assume no liability for any issues arising from the use of this app.</string>
    <string name="check_for_update">Check for update</string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="grade_section"><![CDATA[Grade & Section]]></string>
    <string name="enter_your_section">Enter your section</string>
    <string name="account">Account</string>
    <string name="account_options">Account Options</string>
    <string name="update_profile_information">Update Profile Information</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="entry_data">Entry Data</string>
    <string name="name">Name:</string>
    <string name="date_amp_time"><![CDATA[Date & Time:]]></string>
    <string name="grade_amp_section"><![CDATA[Grade & Section:]]></string>
    <string name="okay">Okay</string>
    <string name="banner">Banner</string>
    <string name="user_profile">User profile</string>
    <string name="new_email">New Email</string>
    <string name="your_current_email_address_is">Your current email address is:</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="enter_new_email_address">Enter new email address</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="warning_this_action_cannot_be_undone">Warning this action cannot be undone!</string>
    <string name="enter_your_password_to_confirm">Enter your password to confirm</string>
    <string name="enter_name">Enter name</string>
    <string name="edit">Edit</string>
    <string name="export_to_excel">Export to excel</string>
    <string name="select_individual_grade_and_section_if_needed">Select individual grade and section if needed</string>
    <string name="grade">Grade</string>
    <string name="export">Export</string>
    <string name="you_can_export_the_data_on_this_page">You can export the data on this page</string>
    <string name="section">Section</string>
    <string name="learners_reference_number_lrn">Learners Reference Number(LRN)</string>
    <string name="enter_your_lrn">Enter your LRN</string>
    <string name="edit_name">Edit Name</string>
    <string name="pending">Pending</string>
    <string name="pending_student_registrations">Pending Student Registrations</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="learners_reference_number">Learners Reference Number:</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
</resources>