<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#eff0fc"
tools:context=".LoginActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/top_background"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="#6E78FE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:layout_marginEnd="-30dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:srcCompat="@drawable/register"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/create_an_naccount"
                android:textColor="#ffffff"
                android:textSize="33sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textColor="#2f3363"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/enter_your_full_name"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grade_section"
            android:textColor="#2f3363"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" />

        <Spinner
            android:id="@+id/spinner_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edittext"
            android:minHeight="48dp"
            android:padding="8dp"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinner_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edittext"
            android:minHeight="48dp"
            android:padding="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/learners_reference_number_lrn"
            android:textColor="#2f3363"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_lrn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/enter_your_lrn"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_email"
            android:textColor="#2f3363"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/your_password"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_register"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/background_btn_1"
            android:baselineAligned="false"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>

    <ProgressBar
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/purple_500"
        android:progressTint="@color/purple_500"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>